apps/f1-predictor/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: f1-predictor
  labels:
    name: f1-predictor
